# QLauncher

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  pylintrc  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: .gitignore  README.md  api_reference.rst  backends.rst  build.sh  conf.py  doc_gen_requirements.txt  examples.rst  index.rst  tutorials.rst
docs/_templates/: module.rst
docs/examples/: hampy_tutorial.ipynb
docs/tutorials/: Circuit Translations.ipynb  Qiskit.ipynb  backends_algorithms.ipynb  circuit_translations.ipynb  define_your_own_problem.ipynb  hampy_tutorial.ipynb  problem_types.ipynb
examples/: Circuit Translations.ipynb  Define your own problem.ipynb  Dwave.ipynb  Orca.ipynb  Qiskit.ipynb  aql_example.py  backends_algorithms.ipynb  circuit_translations.ipynb  define_your_own_problem.ipynb  dtqw.ipynb  dwave_example.py  educated_guess.py  hampy_tutorial.ipynb  orca_example.py  problem_types.ipynb  profiling_example.py  qiskit_example.py
examples/Backends/: Dwave.ipynb  Orca.ipynb  Qiskit.ipynb
examples/src/: aql_example.py  dwave_example.py  educated_guess.py  orca_example.py  profiling_example.py  qiskit_example.py
qlauncher/: __init__.py  exceptions.py  utils.py
qlauncher/base/: __init__.py  adapter_structure.py  base.py  models.py  problem_like.py  translator.py
qlauncher/hampy/: __init__.py  debug.py  equations.py  object.py  utils.py
qlauncher/launcher/: __init__.py  plauncher.py  profiling_launcher.py  qlauncher.py
qlauncher/problems/: __init__.py  circuit.py  ec.py  graph_coloring.py  jssp.py  knapsack.py  maxcut.py  qatm.py  tsp.py
qlauncher/routines/: circuits.py  cirq.py  cirq_routines.py  dwave_routines.py  orca_routines.py
qlauncher/workflow/: __init__.py  base_job_manager.py  execution_manager.py  local_scheduler.py  pilotjob_scheduler.py  pilotjob_task.py  slurm_job_manager.py  subprocess_fn.py  workflow_manager.py
quantum_launcher/: __init__.py  import_management.py  utils.py
quantum_launcher/base/: __init__.py  adapter_structure.py  base.py  qasm_translator.py  translator.py
quantum_launcher/hampy/: __init__.py  debug.py  equations.py  hamiltonian.py  object.py  quadratic.py  utils.py
quantum_launcher/launcher/: aql.py  (+2 more)
tutorials/: QAOA_example.ipynb
(+158 files in other folders)
