[project]
name = "qlauncher"
version = "2.1.1"
description = "QLauncher is modular tool, for solving many problems on many algorithms using many quantum computing backends"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "networkx",
    "notebook",
    "numpy<=1.26.4",
    "overrides",
    "pandas",
    "pathos>=0.3.3",
    "matplotlib",
    "pyqubo",
    "scipy",
    "qiskit < 2.0",
    "qiskit_algorithms == 0.4.0",
    "qiskit_aqt_provider",
    "qiskit_ibm_runtime",
    "qiskit_optimization",
    "qiskit_aer",
    "qcg-pilotjob",
    "dill",
    "qiskit_nature",
    # "pyscf" # Not working on windows?
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["."]
include = ["qlauncher*"]

[project.optional-dependencies]
vqe = ["pyscf"]
ml = ["qiskit-machine-learning","scikit_learn"]
orca = ["numba==0.60.0", "torch"]
dwave = ["dwave-ocean-sdk", "dwave-tabu>=0.5.0"]
cirq = ["cirq>=1.4.1", "ply"]

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.ruff]
line-length = 140
target-version = "py311"

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[tool.ruff.lint]
select = ["E", # pycodestyle errors
          "W", # pycodestyle warnings
          "F", # pyflakes
          "I", # isort
          "B", # flake8-bugbear
          "UP", # pyupgrade
          "C4", # flake8-comprehensions
          "SIM", # flake8-simplify
          "ANN", # flake8-annotations
          "FA", # flake8-future-annotations
          "ISC", # flake8-implicit-str-concat
          "ICN", # flake8-import-conventions
          "RET", # flake8-return
          "TID", # flake8-tidy-imports
          "TC", # flake8-type-checking
          "TD", # flake8-todos
          "NPY", # NumPy-specific rules
]
ignore = ["W191", "E111", "E114", "E117", "E501", "D206", "D300", "ISC002", "ANN001", "ANN003", "ANN204"]

[dependency-groups]
dev = [
    "better-apidoc>=0.3.2",
    "myst-nb>=1.4.0",
    "pandoc>=2.4",
    "psutil>=7.0.0",
    "pylatexenc>=2.10",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.3.0",
    "pytest-httpx>=0.35.0",
    "sphinx==8.2.3",
    "sphinx-book-theme>=1.2.0",
    "sphinx-copybutton>=0.5.2",
]
